Partial fix for OPENAM-456 This commit fixes most of the following warnings in amserver module: - using size() == 0 instead of isEmpty() - using string concatenation inside of stringbuilder/buffer#append - unused imports - in 3 places I've removed redefinitions of the same constant variables with the same values - using stringbuffer in places where stringbuilder can be safely used - checking string equality with == - empty statements (like ';;') - using manual array copy instead of System#arraycopy or Collections#addAll - using new Boolean() instead of Boolean.valueOf
git-svn-id: https://svn.forgerock.org/openam/trunk@574 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d